# diagrams-reflex

./: .envrc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  default.nix  diagrams-reflex.cabal  diagrams-svg.cabal  ghcjs.nix  hie.yaml  stack.yaml
.hix-flake/: flake.nix
example/: bouncing-diagrams-reflex.cabal  counting-diagrams-reflex.cabal  diagrams-reflex-examples.cabal  ghcjs.nix  stack.yaml
example/src/: Colors.hs  Counting.hs  Follow.hs  Main.hs
nix/: hix.nix
src/Diagrams/Backend/: Reflex.hs
src/Diagrams/Backend/Reflex/: Attributes.hs  FFI.hs
src/Graphics/Rendering/: Reflex.hs
