Name:                diagrams-reflex
Version:             0.1
Synopsis:            reflex backend for diagrams drawing EDSL.
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Extra-source-files:  README.md, CHANGELOG.md
Author:              Daniel Bergey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-reflex/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Description:         This package provides a modular backend for rendering
                     diagrams created with the diagrams EDSL to dynamic inline SVGs.
                     It uses @reflex-dom@ and the @reflex@ FRP system.
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-reflex

Library
  Exposed-modules:     Diagrams.Backend.Reflex
  Other-modules:       Graphics.Rendering.Reflex
  Hs-source-dirs:      src
  Build-depends:       base                 >= 4.3   && < 4.9
                     , mtl                  >= 1     && < 2.3
                     , colour >= 2.3.2 && < 2.4
                     , diagrams-core        >= 1.3   && < 1.4
                     , diagrams-lib         >= 1.3   && < 1.4
                     , monoid-extras        >= 0.3   && < 0.5
                     , reflex-dom            >= 0.2   && < 0.4
                     , reflex >= 0.3 && < 0.5
                     , reflex-dom-contrib >= 0.4 && < 0.5
                     , containers           >= 0.3   && < 0.6
                     , lens                 >= 4.0   && < 4.14

  Ghc-options:         -Wall

  Default-language:  Haskell2010
