Name:                diagrams-reflex
Version:             0.2
Synopsis:            reflex backend for diagrams drawing EDSL.
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Extra-source-files:  README.md, CHANGELOG.md
Author:              Daniel Bergey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-reflex/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Description:         This package provides a modular backend for rendering
                     diagrams created with the diagrams EDSL to dynamic inline SVGs.
                     It uses @reflex-dom@ and the @reflex@ FRP system.

Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-reflex

Library
  Exposed-modules:     Diagrams.Backend.Reflex
  Other-modules:       Graphics.Rendering.Reflex
  Hs-source-dirs:      src
  Build-depends:       base
                     , colour
                     , containers
                     , diagrams-core
                     , diagrams-lib
                     , jsaddle-warp
                     , lens
                     , mtl
                     , reflex
                     , reflex-dom-core
                     , text

  Ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs
                      -fdiagnostics-color=never

  Default-language:  Haskell2010
