name:                diagrams-reflex-examples
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/bergey/gooey
license:             BSD3
license-file:        LICENSE
author:              Daniel Bergey
maintainer:          bergey@teallabs.org
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable diagrams-reflex-counting
  main-is:             Counting.hs
  -- other-modules:       Lib
  other-extensions:    JavaScriptFFI, CPP, OverloadedStrings
  build-depends:       base >=4.7 && <4.9
                     , ghcjs-base
                     , diagrams-lib >= 1.3 && < 1.4
                     , diagrams-reflex
                     , reflex-dom
                     , reflex
  hs-source-dirs:      src
  default-language:    Haskell2010

executable diagrams-reflex-follow
  main-is:             Follow.hs
  -- other-modules:       Lib
  other-extensions:    JavaScriptFFI, CPP, OverloadedStrings
  build-depends:       base >=4.7 && <4.9
                     , ghcjs-base
                     , diagrams-lib >= 1.3 && < 1.4
                     , diagrams-reflex
                     , reflex-dom
                     , reflex
  hs-source-dirs:      src
  default-language:    Haskell2010

executable diagrams-reflex-colors
  main-is:             Colors.hs
  other-extensions:    JavaScriptFFI, CPP, OverloadedStrings
  build-depends:       base >=4.7 && <4.9
                     , ghcjs-base
                     , diagrams-lib >= 1.3 && < 1.4
                     , diagrams-reflex
                     , reflex-dom
                     , reflex
  hs-source-dirs:      src
  default-language:    Haskell2010
  